--- a/Atividade_1/index.html
+++ b/Atividade_1/index.html
@@ -43,15 +43,15 @@
   <div class="form">
     <label>
       Nome do aluno
-      <input id="nome" type="text" placeholder="Ex.: Ana Souza">
+      <input id="nome" type="text">
     </label>
     <label>
       Nota 1
-      <input id="n1" type="number" step="0.01" min="0" max="10" placeholder="0–10">
+      <input id="n1" type="number" step="0.01" min="0" max="10">
     </label>
     <label>
       Nota 2
-      <input id="n2" type="number" step="0.01" min="0" max="10" placeholder="0–10">
+      <input id="n2" type="number" step="0.01" min="0" max="10">
     </label>
 
     <div class="actions">
@@ -78,52 +78,40 @@
   </table>
 
   <script>
-    const nome = document.getElementById('nome');
-    const n1 = document.getElementById('n1');
-    const n2 = document.getElementById('n2');
-    const addBtn = document.getElementById('add');
-    const clearBtn = document.getElementById('clear');
-    const tbody = document.getElementById('tbody');
+    var nome  = document.getElementById('nome');
+    var n1    = document.getElementById('n1');
+    var n2    = document.getElementById('n2');
+    var add   = document.getElementById('add');
+    var clear = document.getElementById('clear');
+    var tbody = document.getElementById('tbody');
 
+    function adicionar(){
+      var nomeVal = (nome.value || '').trim();
+      var a = parseFloat(n1.value);
+      var b = parseFloat(n2.value);
 
-    function toNum(v){
-      const x = parseFloat(String(v).replace(',', '.'));
-      return Number.isFinite(x) ? x : NaN;
-    }
+      if (!nomeVal) { alert('Informe o nome do aluno.'); nome.focus(); return; }
+      if (!isFinite(a) || a < 0 || a > 10) { alert('Nota 1 inválida (0 a 10).'); n1.focus(); return; }
+      if (!isFinite(b) || b < 0 || b > 10) { alert('Nota 2 inválida (0 a 10).'); n2.focus(); return; }
 
-    function media2(a, b){ return (a + b) / 2; }
-    function situacao(media){ return media >= 7 ? 'Aprovado' : 'Reprovado'; }
-    function classe(media){ return media >= 7 ? 'aprovado' : 'reprovado'; }
-    function format(n){ return Number(n).toFixed(2).replace('.', ','); }
+      var media = (a + b) / 2;
+      var situacao = media >= 7 ? 'Aprovado' : 'Reprovado';
 
-    function addAluno(){
-      const nomeVal = (nome.value || '').trim();
-      const n1Val = toNum(n1.value);
-      const n2Val = toNum(n2.value);
+      var tr  = document.createElement('tr');
+      if (media >= 7) tr.style.backgroundColor = '#e9fbe9';
+      else tr.style.backgroundColor = '#fdeaea';
 
-        if(!nomeVal){ 
-            alert('Informe o nome do aluno.'); nome.focus(); return; 
-        }
+      var td1 = document.createElement('td'); td1.textContent = nomeVal;
+      var td2 = document.createElement('td'); td2.textContent = a;
+      var td3 = document.createElement('td'); td3.textContent = b;
+      var td4 = document.createElement('td'); td4.textContent = media;
+      var td5 = document.createElement('td'); td5.textContent = situacao;
 
-        if(!Number.isFinite(n1Val) || n1Val < 0 || n1Val > 10){ 
-            alert('Nota 1 inválida (0 a 10).'); n1.focus(); return; 
-        }
-    
-        if(!Number.isFinite(n2Val) || n2Val < 0 || n2Val > 10){ 
-            alert('Nota 2 inválida (0 a 10).'); n2.focus(); return; 
-        }
-
-      const m = media2(n1Val, n2Val);
-      const tr = document.createElement('tr');
-      tr.className = classe(m);
-      tr.innerHTML = `
-        <td>${escapeHtml(nomeVal)}</td>
-        <td>${format(n1Val)}</td>
-        <td>${format(n2Val)}</td>
-        <td><strong>${format(m)}</strong></td>
-        <td>${situacao(m)}</td>
-      `;
-
+      tr.appendChild(td1);
+      tr.appendChild(td2);
+      tr.appendChild(td3);
+      tr.appendChild(td4);
+      tr.appendChild(td5);
       tbody.appendChild(tr);
 
       nome.value = '';
@@ -132,24 +120,19 @@
       nome.focus();
     }
 
-    function escapeHtml(s){
-      return s.replace(/[&<>\"']/g, c => ({
-        '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'
-      })[c]);
-    }
+    add.addEventListener('click', adicionar);
+    clear.addEventListener('click', function () { tbody.innerHTML = ''; });
 
-    addBtn.addEventListener('click', addAluno);
+    nome.addEventListener('keydown', function (e) { if (e.key === 'Enter') n1.focus(); });
+    n1.addEventListener('keydown',   function (e) { if (e.key === 'Enter') n2.focus(); });
+    n2.addEventListener('keydown',   function (e) { if (e.key === 'Enter') adicionar(); });
 
-    nome.addEventListener('keydown', e => { if(e.key === 'Enter') n1.focus(); });
-    n1.addEventListener('keydown', e => { if(e.key === 'Enter') n2.focus(); });
-    n2.addEventListener('keydown', e => { if(e.key === 'Enter') addAluno(); });
-
-    clearBtn.addEventListener('click', () => { tbody.innerHTML = ''; });
-
-    tbody.addEventListener('click', (e) => {
-      const tr = e.target.closest('tr');
-      if(tr) tr.remove();
+    tbody.addEventListener('click', function (e) {
+      var tr = e.target.closest('tr');
+      if (tr) tr.remove();
     });
   </script>
+
+
 </body>
 </html>
